inpunt hits feature

--- a/src/components/UI/Input.module.css
+++ b/src/components/UI/Input.module.css
@@ -85,14 +85,11 @@
   top: 50%;
   cursor: pointer;
   transform: translate(0%, -50%);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-}
-
-.input__main-close.active {
   opacity: 1;
   pointer-events: auto;
+  transition: opacity 0.3s ease;
+  border: 0px;
+  background: #fff;
 }
 
 .input__main-close svg {
