--- a/src/components/UI/Input.module.css
+++ b/src/components/UI/Input.module.css
@@ -69,6 +69,11 @@
   border-bottom-right-radius: 0px;
 }
 
+.input.disabled input {
+  color: #acacac;
+  cursor: not-allowed;
+}
+
 .input input::placeholder {
   font: inherit;
   font-size: inherit;
