--- a/src/index.css
+++ b/src/index.css
@@ -162,3 +162,38 @@ header {
     padding-top: 35px;
   }
 }
+
+@media (max-width: 575px) {
+  body {
+    background: linear-gradient(117.42deg, #004597 36.48%, #0083fc 67.74%);
+  }
+
+  .container {
+    max-width: calc(100% - 22px);
+  }
+
+  span {
+    font-size: 15px;
+    line-height: 18px;
+  }
+
+  h1,
+  .h1 {
+    font-size: 25px;
+    line-height: 34px;
+  }
+
+  h4,
+  .h4 {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  header {
+    padding-top: 35px;
+  }
+
+  .logo {
+    width: 140px;
+  }
+}
