--- a/src/components/UI/AdvicePopup.module.css
+++ b/src/components/UI/AdvicePopup.module.css
@@ -67,3 +67,34 @@
   opacity: 1;
   pointer-events: auto;
 }
+
+@media (max-width: 575px) {
+  .popup {
+    width: 214px;
+    right: 6px;
+    padding: 15px;
+    padding-top: 13px;
+    border-radius: 10px;
+    min-height: 53px;
+  }
+
+  .popup img {
+    margin-top: 14px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .popup {
+    width: 262px;
+    max-width: calc(100vw - 106px);
+    right: 0px;
+    left: auto;
+    bottom: calc(100% + 6px);
+  }
+
+  .popup:before {
+    left: 0px;
+    top: auto;
+    bottom: -6px;
+  }
+}
